UseCase pattern added; Koin added in searchModule;

--- a/feature/player/src/main/res/values/strings.xml
+++ b/feature/player/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="play_button_description">Play button</string>
+    <string name="pause_button_description">Pause button</string>
 </resources>
