--- a/feature/search/src/main/res/values/strings.xml
+++ b/feature/search/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="search_bar_hint">track/author/album name…</string>
+    <string name="search_bar_hint">track, author, album name…</string>
 </resources>
